--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@ img {
 width: 40vw;
 }
 
+img[src="ghoulies2.png"] {
+    width: 120px;
+    margin-left: 14px;
+    margin-right: 14px;
+}
+
 h1 {
 background-color: #35CE8D;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -43,6 +49,13 @@ li {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
     text-align: center;
+}
+
+button {
+background-color: goldenrod;
+border-color: silver;
+box-shadow: 0px 0px 2px 2px rgb(0,0,0);
+font-weight: bolder;
 }
 
 footer {
